--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,16 @@ version: "2.3"
 
 services:
   lms:
-    image: larsks/logitech-media-server
+    build:
+      context: ./
+      args:
+        PACKAGE_VERSION_URL: >-
+          http://downloads.slimdevices.com/nightly/7.9/sc/25f77d7bd57a9ea70a4cf4a6b5be974849fd2a05/logitechmediaserver_7.9.2~1565967976_amd64.deb
+    image: lms:7.9.2
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - squeezebox:/srv/squeezebox
-      - ${AUDIO_DIR}:/srv/music
+      - ${AUDIO_DIR}:/srv/music:ro
     ports:
 ## uncomment the following line if you want to be able to
 ## access the web ui on port 80.
@@ -17,6 +22,7 @@ services:
       - "9090:9090"
       - "3483:3483"
       - "3483:3483/udp"
+      - "1900:1900/udp"
     restart: always
     init: true
 
